--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/nuxt": "^0.4.2",
     "@nuxtjs/emotion": "^0.1.0",
     "core-js": "^3.19.3",
+    "moralis": "^1.11.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
@@ -27,6 +28,7 @@
     "@babel/eslint-parser": "^7.16.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@vue/test-utils": "^1.3.0",
